--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -20,9 +20,6 @@
                         <div class="d-flex justify-content-end">
                             <div th:text="${#temporals.format(review.firstCreatedDate, '작성일 yyyy-MM-dd HH:mm')}"></div>
                         </div>
-                        <div class="d-flex justify-content-end">
-                            <div th:text="${#temporals.format(review.lastModifiedDate, '수정일 yyyy-MM-dd HH:mm')}"></div>
-                        </div>
                 </div>
             </div>
         </div>
@@ -32,16 +29,16 @@
     <div class="row">
         <div class="col-lg-3 col-md-12">
             <!-- 선택된 태그 조회 -->
-            <div class='card card-small mb-3'>
+            <div class='card card-small mb-3'style="height:290px;overflow: scroll;">
                 <div class="card-header border-bottom">
-                    <h6 class="m-0">Tags</h6>
+                    <h6 class="m-0">
+                        <i class="material-icons mr-1">flag</i>Tags</h6>
                 </div>
                 <div class='card-body p-0'>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-3">
-                        <span class="d-flex mb-2"th:each="Tag :${review.reviewTags}">
-                          <i class="material-icons mr-1">flag</i>
-                          <strong class="mr-1">Selected:</strong> <stan th:text="${review.getTag(review,TagStat.index)}"></stan>
+                            <span class="d-flex mb-2"th:each="Tag :${review.reviewTags}">
+                            <span th:text="${review.getTag(review,TagStat.index)}"></span>
                           <a class="ml-auto" href="#">Go!</a>
                         </span>
                         </li>
@@ -49,7 +46,7 @@
                 </div>
             </div>
             <!-- Post Overview -->
-            <div class='card card-small mb-3'>
+            <div class='card card-small mb-3'style="height:120px;">
                 <div class="card-header border-bottom">
                     <h6 class="m-0">Edit Review</h6>
                 </div>
@@ -74,7 +71,7 @@
             <!-- Add New Post Form -->
             <div class="card card-small mb-3">
                 <div class="card-body">
-                    <div style="white-space: pre-line;height:200px;" th:text="${review.content}"></div>
+                    <div style="white-space: pre-line;height:400px;overflow: scroll;" th:text="${review.content}"></div>
                 </div>
             </div>
             <!-- / Add New Post Form -->
