--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -16,18 +16,37 @@
     <input type="hidden" name="plan_id" th:value="${plan.id}">
     <input type="hidden" name="course_id" th:value="${course.id}">
     <div class="card card py-3" style="width:20%; height:80%;">
-        <div class="text-center mb-3">장바구니</div>
+        <div class="text-center mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                 class="bi bi-bag-heart-fill" viewBox="0 0 16 16">
+                <path d="M11.5 4v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5ZM8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1Zm0 6.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+            </svg>
+        </div>
         <div class="busket row justify-content-center d-flex align-items-center" style="overflow-y: scroll;">
             <!--여기에 장바구니 목록 들어옴-->
             <th:block th:if="${spotList.size() > 0}" th:each="spot : ${spotList}">
                 <div class="p-2 border-bottom border-1 my-1" style="width: 200px;">
-                    <a class="font-weight-bold" th:onclick="'window.open(\'http://place.map.kakao.com/' + ${spot.urlId} + '\')'" th:text="${spot.name}"></a>
+                    <a class="font-weight-bold"
+                       th:onclick="'window.open(\'http://place.map.kakao.com/' + ${spot.urlId} + '\')'"
+                       th:text="${spot.name}"></a>
                     <br>
                     <span class="mb-1" th:text="${spot.address}"></span>
                     <br>
-                    <div class="btn-group float-right" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="btn btn-outline-primary" th:onclick="|insertCourse(${spot.id})|">+</button>
-                        <button type="button" class="btn btn-outline-primary" th:onclick="|removeAtBusket(${spot.id}, this);|">x</button>
+                    <div class="float-right">
+                        <button type="button" class="btn btn-outline-primary" th:onclick="|insertCourse(${spot.id})|">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-calendar-plus" viewBox="0 0 16 16">
+                                <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
+                                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                            </svg>
+                        </button>
+                        <button type="button" class="btn btn-outline-danger"
+                                th:onclick="|removeAtBusket(${spot.id}, this);|">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-x" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M6.146 8.146a.5.5 0 0 1 .708 0L8 9.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 10l1.147 1.146a.5.5 0 0 1-.708.708L8 10.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 10 6.146 8.854a.5.5 0 0 1 0-.708z"/>
+                                <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </th:block>
@@ -35,14 +54,14 @@
     </div>
     <div class="mx-2" style="width: 65%; height: 80%">
         <div class="d-flex container justify-content-around mb-2">
-            <a class="px-5 card card"
+            <a class="px-5 py-2 card card"
                th:if="${course.orders - 1 > 0}"
                th:href="@{|?order=${course.orders - 1}|}"
                th:text="|${course.orders - 1}일차|"
             >
             </a>
-            <a class="px-5 card card" th:text="|${course.orders}일차|"></a>
-            <a class="px-5 card card"
+            <a class="px-5 py-2 card card" th:text="|${course.orders}일차|"></a>
+            <a class="px-5 py-2 card card"
                th:if="${course.orders + 1 <= plan.size}"
                th:text="|${course.orders + 1}일차|"
                th:href="@{|?order=${course.orders + 1}|}"></a>
@@ -51,7 +70,7 @@
              style="height:10%; height: 15%; overflow: auto; white-space: nowrap;"></div>
         <!--지도-->
         <div class="map_wrap">
-            <div id="map" style="width:100%;height:100%;position:absolute;overflow:hidden;"></div>
+            <div id="map" style="width:100%;height:95%;position:absolute;overflow:hidden;"></div>
 
             <div id="menu_wrap" class="bg_white">
                 <div class="option">
@@ -73,7 +92,11 @@
     </div>
     <div style="width:20%; height:80%;">
         <div class="card card py-3 mb-4" style="width:100%; height:85%;">
-            <div class="text-center mb-2">채팅방</div>
+            <div class="text-center mb-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-fill" viewBox="0 0 16 16">
+                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9.06 9.06 0 0 0 8 15z"/>
+                </svg>
+            </div>
             <div class="chat" id="app" v-cloak>
                 <div>
                     <h2 class="text-center mb-3" th:text=${room.roomName}></h2>
@@ -118,53 +141,72 @@
                     },
                     created() {
                         this.roomId = document.getElementById("roomId").value;
-                        this.user = document.getElementById("nickName").value;;
+                        this.user = document.getElementById("nickName").value;
+                        ;
                         this.findRoom();
                         this.findMessages();
                     },
                     methods: {
-                        findRoom: function() {
-                            axios.get('/chat/room/'+this.roomId).then(response => { this.room = response.data; });
+                        findRoom: function () {
+                            axios.get('/chat/room/' + this.roomId).then(response => {
+                                this.room = response.data;
+                            });
                         },
-                        findMessages: function() {
-                            axios.get('/chat/room/messages/'+this.roomId).then(response => { this.messages = response.data; });
+                        findMessages: function () {
+                            axios.get('/chat/room/messages/' + this.roomId).then(response => {
+                                this.messages = response.data;
+                            });
                         },
-                        sendMessage: function() {
-                            ws.send("/app/chat/message", {}, JSON.stringify({roomId:this.roomId, user:this.user, content:this.content}));
+                        sendMessage: function () {
+                            ws.send("/app/chat/message", {}, JSON.stringify({
+                                roomId: this.roomId,
+                                user: this.user,
+                                content: this.content
+                            }));
                             this.content = '';
                         },
-                        recvMessage: function(recv) {
-                            this.messages.unshift({"user":recv.user,"content":recv.content})
+                        recvMessage: function (recv) {
+                            this.messages.unshift({"user": recv.user, "content": recv.content})
                         }
                     }
                 });
 
                 function connect() {
                     // pub/sub event
-                    ws.connect({}, function(frame) {
-                        ws.subscribe("/topic/chat/room/"+vm.$data.roomId, function(message) {
+                    ws.connect({}, function (frame) {
+                        ws.subscribe("/topic/chat/room/" + vm.$data.roomId, function (message) {
                             var recv = JSON.parse(message.body);
                             vm.recvMessage(recv);
                         });
-                        ws.send("/app/chat/message", {}, JSON.stringify({roomId:vm.$data.roomId, user:vm.$data.user, content:vm.$data.user + "가 채팅방에 입장했습니다."}));
-                    }, function(error) {
-                        if(reconnect++ <= 5) {
-                            setTimeout(function() {
+                        ws.send("/app/chat/message", {}, JSON.stringify({
+                            roomId: vm.$data.roomId,
+                            user: vm.$data.user,
+                            content: vm.$data.user + "가 채팅방에 입장했습니다."
+                        }));
+                    }, function (error) {
+                        if (reconnect++ <= 5) {
+                            setTimeout(function () {
                                 console.log("connection reconnect");
                                 sock = new SockJS("/ws/chat");
                                 ws = Stomp.over(sock);
                                 connect();
-                            },10*1000);
+                            }, 10 * 1000);
                         }
                     });
                 }
+
                 connect();
             </script>
         </div>
         <div>
             <a class="btn btn-primary py-4" style="width:100%;"
-               th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}"
-            >저장</a>
+               th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                     class="bi bi-calendar-check" viewBox="0 0 16 16">
+                    <path d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                </svg>
+            </a>
         </div>
     </div>
 </div>
