new plan 페이지 UI 수정

--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -39,12 +39,12 @@
         <form onsubmit="submitForm(this); return false;" th:action="@{/travel/design/new}" method="post"
               class="card card mt-2 w-100">
             <div class="m-auto w-100">
-                <div class="input-group m-3 w-75">
+                <div class="input-group m-3" style="width:95%;">
                     <span class="input-group-text text-black" id="inputGroup-sizing-lg">여행이름</span>
                     <input type="text" name="title" id="title" class="form-control" aria-label="Sizing example input"
                            aria-describedby="inputGroup-sizing-default">
                 </div>
-                <div class="input-group m-3 w-75">
+                <div class="input-group m-3" style="width:95%;">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="input_from">From</label>
@@ -65,11 +65,11 @@
                     <!--                    <input name="size" id="size" type="text" class="form-control" aria-label="Sizing example input"-->
                     <!--                           aria-describedby="inputGroup-sizing-default">-->
                 </div>
-                <div class="input-group m-3 w-75">
+                <div class="input-group m-3" style="width:95%;">
                     <span class="input-group-text text-black">Memo</span>
                     <textarea class="form-control" name="memo" id="memo" aria-label="With textarea"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary m-3 w-75">저장</button>
+                <button type="submit" class="btn btn-primary m-3" style="width:95%;">저장</button>
             </div>
         </form>
     </div>
