plan_list 아이콘 삽입 등 수정

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -1,5 +1,5 @@
 <html layout:decorate="~{layout/layout}">
-<div layout:fragment="content" class=" d-flex justify-content-around mt-3"
+<div layout:fragment="content" class="d-flex justify-content-center mt-3"
      style="width:95%; height:100%; position:absolute;">
     <script>
         window.onload = function () {
