여행지 상세 페이지 UI 꾸밈

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -18,13 +18,23 @@
     <!--제목과 수정, 삭제 버튼-->
     <div class="justify-content-between d-flex mb-2" style="height: 10%;">
         <h1 th:text="${plan.title}"></h1>
-        <div class="d-flex w-25" style="align-items: center;">
-            <a class="w-50 h-100 btn btn-info mr-2" style="align-items: center;"
-               th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정
+        <div class="d-flex w-25" style="align-items: center; text-align: center;">
+            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4" style="align-items: center;"
+               th:href="@{|/travel/design/modification/${plan.id}?order=1|}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                </svg>
+                <br>
+                수정
             </a>
-            <a class="w-50 h-100 btn btn-danger" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
-               style="align-items: center;"
-               th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제
+            <a class="w-50 h-100 btn btn-outline-danger fs-4" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;" style="align-items: center;"
+               th:href="@{|/travel/design/plan/delete/${plan.id}|}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                </svg>
+                <br>
+                삭제
             </a>
         </div>
     </div>
@@ -108,17 +118,19 @@
 
         <div style="width: 50%; height: 100%;">
             <!--코스 정보-->
-            <div class="card card overflow-scroll container mx-1 row" style="width:100%; max-height:100%;">
-                <div class="border-bottom border-1 py-1 my-1 d-flex overflow-scroll"
-                     th:each="spot, loop : ${course.spotList}">
-                    <div>
-                        <h3 style="align-items: center; white-space: nowrap;" href="#" th:text="|${spot.name}|"></h3>
-                        <a th:href="@{|http://place.map.kakao.com/${spot.urlId}|}" style="white-space: nowrap;"
-                           target="_blank">카카오 맵에서 보기</a>
-                    </div>
+            <div class="mb-2 d-flex bg-white shadow px-3 py-4 bg-body rounded justify-content-start" style="width:100%; max-height:100%; white-space: nowrap; overflow: auto;">
+                <h3 th:if="${course.spotList.size() == 0}" class="text-center">장소를 추가해 보세요!</h3>
+                <div th:each="spot, loop : ${course.spotList}">
+                    <a th:if="${loop.count != 1}" class="mr-2 badge badge-outline-danger">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                        </svg>
+                    </a>
+                    <a class="btn btn-outline-primary mr-2" th:href="@{|http://place.map.kakao.com/${spot.urlId}|}" style="white-space: nowrap;"
+                       target="_blank" th:text="|${spot.name}|"></a>
+                </div>
                     <!--지도-->
                     <!--지도 끝-->
-                </div>
             </div>
             <div class="card card container">
                 <!--지도-->
