--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -26,7 +26,7 @@
                         <div class="d-flex justify-content-between border-bottom border-1 pb-2 mb-2">
                             <div>
                                 <h5 class="card-title col">
-                                    <span th:text="|${plan.size}일|" class="text-dark small ms-2"></span>
+                                    <span th:text="|${plan.size}days|" class="text-dark small ms-2"></span>
                                 </h5>
                             </div>
                             <div class="btn-group">
