--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -77,7 +77,7 @@
                     <span class="input-group-text text-black">Memo</span>
                     <textarea class="form-control" name="memo" id="memo" aria-label="With textarea"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary m-3" style="width:95%;">저장</button>
+                <button type="submit" class="btn btn-primary ml-3 mb-3">저장</button>
             </div>
         </form>
     </div>
