--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -38,14 +38,14 @@
                                 <span>여행 계획 세우기</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link " th:href="@{/user/my_page}" th:if="${#authentication.principal.method.equals('d')}">
+                        <li class="nav-item w-200 d-none d-md-flex d-lg-flex" style="padding-top:10px; adding-left: 10px; padding-right: 10px;" th:if="${#authentication.principal.method.equals('d')}">
+                            <a class="nav-link " th:href="@{/user/my_page}">
                                 <i class="material-icons">person</i>
                                 <span>마이페이지</span>
                             </a>
                         </li>
-                        <li class="nav-item w-200 d-none d-md-flex d-lg-flex" style="padding-top:10px; adding-left: 10px; padding-right: 10px;">
-                            <a class="nav-link " th:href="@{/user/my_page_social}" th:if="!${#authentication.principal.method.equals('d')}">
+                        <li class="nav-item w-200 d-none d-md-flex d-lg-flex" style="padding-top:10px; adding-left: 10px; padding-right: 10px;" th:if="!${#authentication.principal.method.equals('d')}">
+                            <a class="nav-link " th:href="@{/user/my_page_social}">
                                 <i class="material-icons">person</i>
                                 <span>마이페이지</span>
                             </a>
