spot detail 오류 수정

--- a/src/main/resources/templates/user/my_page_form_social.html
+++ b/src/main/resources/templates/user/my_page_form_social.html
@@ -8,7 +8,7 @@
     </div>
     <div class="card card-small mb-4">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item p-3">
+            <li class="list-group-item">
                 <div class="row">
                     <div class="col">
                         <!-- 소셜 로그인 O -->
