--- a/src/main/resources/templates/layout/layout_user.html
+++ b/src/main/resources/templates/layout/layout_user.html
@@ -3,7 +3,7 @@
 
 <!-- 공통 헤드-->
 <head>
-    <title>You Login Template</title>
+    <title>DAMDA</title>
     <!-- Site favicon -->
     <link rel="shortcut icon" href="images/favicon.ico">
     <!-- Mobile Specific Metas -->
@@ -35,8 +35,7 @@
                         <div class="d-flex height-100-percentage padding-30px">
                             <div class="align-self-center width-100-percentage">
                                 <h2>여행을 DAMDA</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>DAMDA는 여행지를 탐색하고, 리뷰하고, 실시간으로 채팅을 하며 여행을 설계하는 서비스입니다.</p>
                             </div>
                         </div>
                     </div>
@@ -55,8 +54,7 @@
                         <div class="d-flex height-100-percentage padding-30px">
                             <div class="align-self-center width-100-percentage">
                                 <h2>여행을 DAMDA</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>DAMDA는 여행지를 탐색하고, 리뷰하고, 실시간으로 채팅을 하며 여행을 설계하는 서비스입니다.</p>
                                 <a class="btn btn-primary btn-lg" href="/travel/design/plan/list" role="button">시작하기</a>
                             </div>
                         </div>
