3초마다 getAllCourse 자동 실행 구현

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -6,6 +6,7 @@
             // getAllBusket(plan_id);
             getAllCourse(course_id);
         }
+        let timerId = setInterval(() => getAllCourse(course_id), 3000); // 2초마다 출력
     </script>
 
     <style>
