--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -12,10 +12,89 @@
                     </div>
                 </div>
             </a>
-            <div th:each="plan : ${paging}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
+            <div th:each="plan, loop : ${paging}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
                 <div class="card card-small card-post h-100 mt-3">
-                    <div class="card-post__image"
-                         th:style="'background-image: url(https://picsum.photos/800);'"></div>
+                    <div class="card-post__image"> <!--th:style="'background-image: url(https://picsum.photos/800);'"-->
+                        <!--지도-->
+                        <div th:id="'map'+${loop.count}" style="width:100%;height:100%;"></div>
+
+                        <script type="text/javascript"
+                                src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
+                        <script th:inline="javascript">
+                            var planBusket = [[${plan.busket.spotList}]];
+                            console.log([[${loop.count}]]);
+                            var mapContainer = document.getElementById('map'+[[${loop.count}]]), // 지도를 표시할 div
+                                mapOption = {
+                                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                                    level: 7 // 지도의 확대 레벨
+                                };
+
+                            // 지도를 생성합니다
+                            console.log('지도생성');
+                            var map = new kakao.maps.Map(mapContainer, mapOption);
+
+                            // 지도를 재설정할 범위정보를 가지고 있을 LatLngBounds 객체를 생성합니다
+                            var bounds = new kakao.maps.LatLngBounds();
+
+                            console.log('positions생성 및 여행지 정보 push');
+                            var positions = [];
+                            planBusket.forEach(spot => {
+                                positions.push(
+                                    {
+                                        title: spot.name,
+                                        addressMap: spot.address
+                                    }
+                                );
+                            });
+
+
+                            // 주소-좌표 변환 객체를 생성합니다
+                            var geocoder = new kakao.maps.services.Geocoder();
+
+                            console.log('주소로 좌표검색해 마커표시');
+                            positions.forEach(function (position) {
+                                // 주소로 좌표를 검색합니다
+                                geocoder.addressSearch(position.addressMap, function (result, status) {
+
+                                    // 정상적으로 검색이 완료됐으면
+                                    if (status === kakao.maps.services.Status.OK) {
+
+                                        var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+
+                                        // 결과값으로 받은 위치를 마커로 표시합니다
+                                        var marker = new kakao.maps.Marker({
+                                            map: map,
+                                            position: coords
+                                        });
+                                        marker.setMap(map);
+
+
+                                        // LatLngBounds 객체에 좌표를 추가합니다
+                                        bounds.extend(coords);
+
+
+                                        // 인포윈도우로 장소에 대한 설명을 표시합니다
+                                        var infowindow = new kakao.maps.InfoWindow({
+                                            content: '<div style="width:150px;text-align:center;padding:6px 0;">' + position.title + '</div>'
+                                        });
+                                        infowindow.open(map, marker);
+
+                                        // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+                                        // map.setCenter(coords);
+                                        setBounds()
+                                    }
+                                });
+                            });
+                            console.log('마커에 따라 범위 재설정');
+                            function setBounds() {
+                                // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
+                                // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
+                                map.setBounds(bounds);
+                            }
+                            positions.
+                        </script>
+                    </div>
                     <div class="card-footer text-muted border-top py-3">
                         <div>
                             <h4 class="card-title col">
