--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -23,6 +23,7 @@
                         <script th:inline="javascript">
                             var planBusket = [[${plan.busket.spotList}]];
                             console.log([[${loop.count}]]);
+                            console.log('map'+[[${loop.count}]]);
                             var mapContainer = document.getElementById('map'+[[${loop.count}]]), // 지도를 표시할 div
                                 mapOption = {
                                     center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
@@ -92,7 +93,6 @@
                                 // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
                                 map.setBounds(bounds);
                             }
-                            positions.
                         </script>
                     </div>
                     <div class="card-footer text-muted border-top py-3">
