레이아웃 경로 수정, 테스트

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,7 +3,7 @@
 
 <!-- 공통 헤드-->
 <link rel="stylesheet" href=".../f">
-<th:block th:replace="/layout/fragments/head :: headFragment"></th:block>
+<th:block th:replace="layout/fragments/head :: headFragment"></th:block>
 
 <body class="h-100">
 <div class="container-fluid">
