타임리프 에러 해결을 위해 layout.html 에서도 / 제거

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,13 +3,13 @@
 
 <!-- 공통 헤드-->
 <link rel="stylesheet" href=".../f">
-<th:block th:replace="/layout/fragments/head :: headFragment"></th:block>
+<th:block th:replace="layout/fragments/head :: headFragment"></th:block>
 
 <body class="h-100">
 <div class="container-fluid">
     <div class="row">
         <!-- Main Sidebar -->
-        <th:block th:replace="/layout/fragments/sidebar :: sidebarFragment"></th:block>
+        <th:block th:replace="layout/fragments/sidebar :: sidebarFragment"></th:block>
 
         <!-- 기본 템플릿 안에 삽입될 내용 Start -->
         <div class="main-content-container container-fluid px-4">
@@ -18,12 +18,12 @@
         <!-- 기본 템플릿 안에 삽입될 내용 End -->
 
         <!-- 공통 하단-->
-        <th:block th:replace="/layout/fragments/footer :: footerFragment"></th:block>
+        <th:block th:replace="layout/fragments/footer :: footerFragment"></th:block>
 
     </div>
 </div>
 
 <!-- 공통 스크립트-->
-<th:block th:replace="/layout/fragments/script :: scriptFragment"></th:block>
+<th:block th:replace="layout/fragments/script :: scriptFragment"></th:block>
 </body>
 </html>
