파비콘, 메인 로고 변경

--- a/src/main/resources/templates/layout/fragments/head.html
+++ b/src/main/resources/templates/layout/fragments/head.html
@@ -16,6 +16,7 @@
             <link rel="stylesheet" th:href="@{/map.css}" type="text/css">
 
             <title>DAMDA</title>
+            <link rel ="icon" href="/images/damda_icon.png">
             <script async defer src="https://buttons.github.io/buttons.js"></script>
             <!-- 제이쿼리 불러오기 -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
