--- a/src/main/resources/templates/layout/fragments/head.html
+++ b/src/main/resources/templates/layout/fragments/head.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+    <!-- OPENGRAPH -->
+    <meta property="og:site_name" content="Damda" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:title" content="여행을 담아 떠나보아요!" />
+    <meta property="og:image" content="/images/damda_logo.png" />
+    <meta property="og:url" content="https://" />
+
     <!-- Head -->
     <th:block th:fragment="headFragment">
         <head>
