--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -118,6 +118,9 @@
 
         <div style="width: 50%; height: 100%;">
             <!--코스 정보-->
+            <div class="mb-1 card card text-center">
+                <h2 th:text="|${course.orders}일차|" class="fs-3"></h2>
+            </div>
             <div class="mb-2 d-flex bg-white shadow px-3 py-4 bg-body rounded justify-content-start" style="width:100%; max-height:100%; white-space: nowrap; overflow: auto;">
                 <h3 th:if="${course.spotList.size() == 0}" class="text-center">장소를 추가해 보세요!</h3>
                 <div th:each="spot, loop : ${course.spotList}">
