--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -38,24 +38,24 @@
                             var bounds = new kakao.maps.LatLngBounds();
 
                             console.log('positions생성 및 여행지 정보 push');
-                            var positions = [];
-                            planBusket.forEach(spot => {
-                                positions.push(
-                                    {
-                                        title: spot.name,
-                                        addressMap: spot.address
-                                    }
-                                );
-                            });
+                            // var positions = [];
+                            // planBusket.forEach(spot => {
+                            //     positions.push(
+                            //         {
+                            //             title: spot.name,
+                            //             addressMap: spot.address
+                            //         }
+                            //     );
+                            // });
 
-
+                            var markers2 = [];
                             // 주소-좌표 변환 객체를 생성합니다
                             var geocoder = new kakao.maps.services.Geocoder();
 
                             console.log('주소로 좌표검색해 마커표시');
-                            positions.forEach(function (position) {
+                            planBusket.forEach(function (position) {
                                 // 주소로 좌표를 검색합니다
-                                geocoder.addressSearch(position.addressMap, function (result, status) {
+                                geocoder.addressSearch(position.address, function (result, status) {
 
                                     // 정상적으로 검색이 완료됐으면
                                     if (status === kakao.maps.services.Status.OK) {
@@ -67,7 +67,7 @@
                                         var marker = new kakao.maps.Marker({
                                             map: map,
                                             position: coords
-                                        });
+                                        })
                                         marker.setMap(map);
 
 
@@ -76,19 +76,18 @@
 
 
                                         // 인포윈도우로 장소에 대한 설명을 표시합니다
-                                        var infowindow = new kakao.maps.InfoWindow({
-                                            content: '<div style="width:150px;text-align:center;padding:6px 0;">' + position.title + '</div>'
-                                        });
-                                        infowindow.open(map, marker);
+                                        // var infowindow = new kakao.maps.InfoWindow({
+                                        //     content: '<div style="width:150px;text-align:center;padding:6px 0;">' + position.title + '</div>'
+                                        // });
+                                        // infowindow.open(map, marker);
 
                                         // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                                        // map.setCenter(coords);
-                                        setBounds()
+                                        setBounds(bounds)
                                     }
                                 });
                             });
                             console.log('마커에 따라 범위 재설정');
-                            function setBounds() {
+                            function setBounds(bounds) {
                                 // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
                                 // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
                                 map.setBounds(bounds);
