--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <!--<link rel="stylesheet" th:href="@{/calendar-15/css/bootstrap.min.css}">-->
     <!-- Style -->
-<!--    <link rel="stylesheet" th:href="@{/calendar-15/css/style.css}">-->
+    <!--    <link rel="stylesheet" th:href="@{/calendar-15/css/style.css}">-->
     <!--캘린더css, js-->
 </head>
 <div layout:fragment="content" class="container my-3">
@@ -41,8 +41,7 @@
                 form.submit();
             }
         </script>
-        <form onsubmit="submitForm(this); return false;" th:action="@{/travel/design/new}" method="post"
-        >
+        <form onsubmit="submitForm(this); return false;" th:action="@{/travel/design/new}" method="post">
             <div class="m-auto w-100">
                 <div class="input-group m-3" style="width:95%;">
                     <span class="input-group-text text-black" id="inputGroup-sizing-lg">여행이름</span>
@@ -81,6 +80,5 @@
             </div>
         </form>
     </div>
-</div>
 </div>
 </html>
