전체 폰트 변경 (h1,h2 등에는 적용 안되는 오류 발생)

--- a/src/main/resources/templates/layout/fragments/head.html
+++ b/src/main/resources/templates/layout/fragments/head.html
@@ -21,6 +21,12 @@
             <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" th:href="@{/styles/shards-dashboards.1.1.0.min.css}">
             <link rel="stylesheet" th:href="@{/styles/extras.1.1.0.min.css}">
             <link rel="stylesheet" th:href="@{/map.css}" type="text/css">
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+                * {
+                    font-family:  'Jua', sans-serif; !important;
+                }
+            </style>
 
             <title>DAMDA</title>
             <link rel ="icon" href="/images/damda_icon.png">
