변경 가능한 폰트(로그인 폼, 일부 제목) 변경[일부 폰트 오류 지속]

--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container" id="app" v-cloak>
     <div>
-        <h2>{{room.name}}</h2>
+        <h2 style="font-family: 'Jua', sans-serif;">{{room.name}}</h2>
     </div>
     <div class="input-group">
         <div class="input-group-prepend">
