--- a/src/main/resources/templates/layout/layout_user.html
+++ b/src/main/resources/templates/layout/layout_user.html
@@ -22,6 +22,12 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <!-- Normal media CSS -->
     <link rel="stylesheet" th:href="@{/css/media.css}">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+        * {
+            font-family:  'Jua', sans-serif; !important;
+        }
+    </style>
 </head>
 <body>
 <main class="cd-main">
