--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -8,7 +8,7 @@
                 <div class="card card-small card-post h-100 mt-3">
                     <div class="card-post__image" th:style="'background-image: url(https://picsum.photos/800);'"></div>
                     <div class="card-footer text-muted border-top py-3">
-                        <h5>플래너를 추가해보세요!</h5>
+                        <h5  style="font-family: 'Jua', sans-serif;">플래너를 추가해보세요!</h5>
                     </div>
                 </div>
             </a>
