--- a/src/main/resources/templates/review/myReviewList.html
+++ b/src/main/resources/templates/review/myReviewList.html
@@ -6,7 +6,7 @@
 <div layout:fragment="content" class="container my-3">
     <div class="my-3 border-bottom">
         <div>
-            <h4>내 여행 리뷰</h4>
+            <h4 style="font-family: 'Jua', sans-serif;">내 여행 리뷰</h4>
         </div>
     </div>
     <table class="table">
