--- a/src/main/resources/templates/design/map/modify_basic.html
+++ b/src/main/resources/templates/design/map/modify_basic.html
@@ -14,7 +14,7 @@
 <div layout:fragment="content" class="container my-3">
     <div class="my-3 border-bottom">
         <div>
-            <h4>여행 기본 정보 수정</h4>
+            <h4 style="font-family: 'Jua', sans-serif;">여행 기본 정보 수정</h4>
         </div>
     </div>
     <div class="card card-small mb-4">
