--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -7,7 +7,7 @@
         <!-- Page Header -->
         <div class="page-header row no-gutters py-4">
             <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
-                <h3 class="page-title" th:text="|${spotDto.name}|"style="font-family: 'Jua', sans-serif;">Spot Detail Infomation</h3>
+                <h3 class="page-title"style="font-family: 'Jua', sans-serif;">Spot Detail Infomation</h3>
             </div>
         </div>
         <!-- End Page Header -->
@@ -39,6 +39,8 @@
                 <div class="card card-small mb-4" style="height: 180px; padding-top: 20px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-4 text-center">
+
+                            <strong class="page-title" th:text="|${spotDto.name}|"style="font-size:xx-large; font-family: 'Jua', sans-serif;"></strong>
                             <strong class="text-muted d-block mb-2">Description</strong>
                             <span th:text="|${spotDto.description}|"></span>
                             <br/>
